--- a/guide.html
+++ b/guide.html
@@ -207,7 +207,7 @@
                         </div>
                         <!-- Footer Logo -->
                         <div class="footer-logo">
-                            <a href="#"><img class="imgp" src="img/core-img/logo2.svg" alt=""></a>
+                            <a href="./index.html"><img class="imgp" src="img/core-img/logo2.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
