--- a/checkin.html
+++ b/checkin.html
@@ -150,7 +150,7 @@
     <div class="map-area section-padding-0-80">
         <div class="container">
             <div id="map">
-				<form action="#" class="login-form mt-2" method="post" target="_top">
+		<form action="https://script.google.com/macros/s/AKfycbzdjUAVG-nkSb8a4cup79a7hO7vCJ8OvCxvlDY8BHSJQhGmPn0O6bhh1wn_FbBo2f0/exec" class="login-form mt-2" method="post" target="_top">
 
             	<div class="form-group">
               		<label for="classNum">查驗代碼</label>
