--- a/checkin.html
+++ b/checkin.html
@@ -101,11 +101,11 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">察驗查詢</h2>
+                        <h2 class="page-title">查驗查詢</h2>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-center">
                                 <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> 首頁</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">察驗查詢</li>
+                                <li class="breadcrumb-item active" aria-current="page">查驗查詢</li>
                             </ol>
                         </nav>
                     </div>
