--- a/2023.02_cellphone.html
+++ b/2023.02_cellphone.html
@@ -4,9 +4,8 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta charset="utf-8">
 <meta name="Excel Workbook Frameset">
-<meta http-equiv=Content-Type content="text/html; charset=utf8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="2023.02_cellphone.files/filelist.xml">
