--- a/checkin.html
+++ b/checkin.html
@@ -67,6 +67,7 @@
                                             <li><a href="./datain.html">資料查詢</a></li>
                                             <li><a href="./snin.html">序號查詢</a></li>
                                             <li class="active"><a href="./checkin.html">查驗查詢</a></li>
+					    <li><a href="./dataveri.html">驗證查詢</a></li>
                                         </ul>
                                     </li>
 									<li><a href="#">資料查詢</a>
@@ -141,7 +142,7 @@
     <div class="map-area section-padding-0-80">
         <div class="container">
             <div id="map">
-				<form action="https://script.google.com/macros/s/AKfycbzlXl2EYDh4oNux4cy1vsrXVggWRazp6hQTcgyEYCYk2GFX20RFafoXhgt5M3FcwdTQfQ/exec" class="login-form mt-2" method="post" target="_top">
+				<form action="https://script.google.com/macros/s/AKfycby17IctiJQaIEzww1oJazvSb3_3uiTNVL_srKx5a9Rs0c1_aKy_dk7NkGilkmiSyfet/exec" class="login-form mt-2" method="post" target="_top">
 
             	<div class="form-group">
               		<label for="classNum">查驗代碼</label>
